force-app/main/default/objects/TransactionCondition__c/TransactionCondition__c.object-meta.xml
<CustomObject>
    <label>Transaction Condition</label>
    <nameField>
        <displayFormat>TC-{0000000}</displayFormat>
        <label>Transaction Condition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>