force-app/main/default/objects/TransactionCondition__c/fields/Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Role__c</fullName>
    <label>Assigned Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower Conditions</fullName>
            </value>
            <value>
                <fullName>Junior Conditions</fullName>
            </value>
            <value>
                <fullName>Loan Officer Conditions</fullName>
            </value>
            <value>
                <fullName>Processor Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>