force-app/main/default/objects/TransactionCondition__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
            <value>
                <fullName>Payoff Demand</fullName>
            </value>
            <value>
                <fullName>HOI</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>WVOE</fullName>
            </value>
            <value>
                <fullName>EMD</fullName>
            </value>
            <value>
                <fullName>LOE</fullName>
            </value>
            <value>
                <fullName>Disclosures</fullName>
            </value>
            <value>
                <fullName>VOM</fullName>
            </value>
            <value>
                <fullName>VOR</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Gift Letter</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>