force-app/main/default/objects/TransactionCondition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Identification</fullName>
            </value>
            <value>
                <fullName>Auth</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Disclosure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>