force-app/main/default/objects/TransactionCondition__c/fields/UWM_Description__c.field-meta.xml
<CustomField>
    <fullName>UWM_Description__c</fullName>
    <label>UWM Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>