force-app/main/default/objects/TransactionCondition__c/fields/UWMReferenceId__c.field-meta.xml
<CustomField>
    <fullName>UWMReferenceId__c</fullName>
    <label>UWM Reference Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>